fix: Ajustar z-index y degradado de categorías

--- a/web_site/css/style.css
+++ b/web_site/css/style.css
@@ -308,7 +308,7 @@
     left: 0;
     width: 100%;
     height: 30%;
-    background: linear-gradient(to top, rgba(7, 96, 156, 0.95) 0%, rgba(7, 96, 156, 0) 100%);
+    background: linear-gradient(to top, rgba(0, 0, 0, 0.95) 0%, rgba(7, 96, 156, 0.95) 50%, rgba(7, 96, 156, 0) 100%);
     z-index: 1;
 }
 
